--- a/gpu.html
+++ b/gpu.html
@@ -2148,7 +2148,7 @@ body.light-mode::before {
                 <a href="recommendations.html" data-key="recommendations">Rekomendācijas</a>
                 <a href="favorites.html" data-key="favorites">Favorīti</a>
                 <div class="home-menu">
-                    <a href="prieksa.html" data-key="home">Home</a>
+                    <a href="index.html" data-key="home">Home</a>
                     <div class="dropdown">
                         <a href="gpu.html" data-key="gpu">GPU</a>
                         <a href="cpu.html" data-key="cpu">CPU</a>
