--- a/cpu.html
+++ b/cpu.html
@@ -1867,7 +1867,7 @@
                 <a href="recommendations.html" data-key="recommendations">Rekomendācijas</a>
                 <a href="favorites.html" data-key="favorites">Favorīti</a>
                 <div class="home-menu">
-                    <a href="prieksa.html" data-key="home">Home</a>
+                    <a href="index.html" data-key="home">Home</a>
                     <div class="dropdown">
                         <a href="gpu.html" data-key="gpu">GPU</a>
                         <a href="cpu.html" data-key="cpu">CPU</a>
@@ -2648,7 +2648,7 @@
                 tdp
             };
             localStorage.setItem('selectedCPU', JSON.stringify(selectedCPU));
-            window.location.href = "prieksa.html";
+            window.location.href = "index.html";
         }
 
         // Toggle favorite
