--- a/gpu.html
+++ b/gpu.html
@@ -2797,7 +2797,7 @@ body.light-mode::before {
             imageUrl: decodeURIComponent(imageUrl || "N/A")
         };
         localStorage.setItem('selectedGPU', JSON.stringify(selectedGPU));
-        window.location.href = "prieksa.html";
+        window.location.href = "index.html";
     }
 
     // Toggle Favorite
